# gRPC-chat

./: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
deployment/: serverless.yml
resources/: chat-1.json
src/: api.rs  main.rs
