[package]
name = "gRPC-chat"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
async-stream = "0.3"
env_logger = "^0.8"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "^0.4"
prost = "0.7"
prost-types = "0.7"
quick-error = "2.0.0"
redis = { version = "0.19.0", features = ["cluster", "tokio-comp"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = "0.4.0"
tower = { version = "0.4" }

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "server"
path = "src/main.rs"
